add first question to html, allow submit button to hide question

--- a/index.html
+++ b/index.html
@@ -20,11 +20,19 @@
     </div>
   </div>
 
-  <div class="form survey">
-    <div class="questions">
+  <div class="form colors hidden">
+    <div class="container">
+      <label>What is your favorite color?</label>
       <select class="form" id="question1">
-        <option>yes</option>
+        <option class="none">Select one</option>
+        <option id="red">Red</option>
+        <option id="green">Green</option>
+        <option id="blue">Blue</option>
+        <option id="orange">Orange</option>
+        <option id="yellow">Yellow</option>
+        <option id="black">Black</option>
       </select>
+      <button class="btn" id="q1">Submit!</button>
     </div>
   </div>
 </body>
