complete first 3 slide functionaly with select options, WIP on radio buttons

--- a/index.html
+++ b/index.html
@@ -20,10 +20,23 @@
     </div>
   </div>
 
+  <div class="form name hidden">
+    <div class="container">
+      <div class="form-group row">
+        <label for="users-name" class="col-sm-3">What is your name?</label>
+        <div class="col-sm-9">
+          <input type="text" class="form-control" id="users-name" placeholder="Your Name Here">
+        </div>
+        <small>Just so we can make your results more personal.</small>
+      </div>
+      <button class="btn" id="q1">Submit!</button>
+    </div>
+  </div>
+
   <div class="form colors hidden">
     <div class="container">
-      <label>What is your favorite color?</label>
-      <select class="form" id="question1">
+      <label>What is your favorite of these colors?</label>
+      <select class="form" id="question2">
         <option class="none">Select one</option>
         <option id="red">Red</option>
         <option id="green">Green</option>
@@ -32,8 +45,31 @@
         <option id="yellow">Yellow</option>
         <option id="black">Black</option>
       </select>
-      <button class="btn" id="q1">Submit!</button>
+      <button class="btn" id="q2">Submit!</button>
     </div>
   </div>
+
+  <div class="form food hidden">
+    <div class="container">
+      <label>What is your favorite of these foods?</label>
+      <select class="form" id="question3">
+        <option class="none">Select one</option>
+        <option id="red">Pizza</option>
+        <option id="green">Sushi</option>
+        <option id="blue">Tacos</option>
+        <option id="orange">Pasta</option>
+        <option id="yellow">Burgers</option>
+        <option id="black">Salad</option>
+      </select>
+      <button class="btn" id="q3">Submit!</button>
+    </div>
+  </div>
+
+  <div class="form desire hidden">
+    <div class="container">
+      <label for=""></label>
+    </div>
+  </div>
+
 </body>
 </html>
