complete building radio buttons, WIP building clickable image submissions

--- a/index.html
+++ b/index.html
@@ -65,11 +65,75 @@
     </div>
   </div>
 
-  <div class="form desire hidden">
+  <div class="form flavor hidden">
     <div class="container">
-      <label for=""></label>
+      <label>What's your favorite ice cream flavor?</label>
+      <div class="radio">
+        <label>
+          <input type="radio" name="flavor" value="chocolate" checked>
+          Chocolate
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="flavor" value="vanilla">
+          Vanilla
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="flavor" value="rocky">
+          Rocky Road
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="flavor" value="mint">
+          Mint Chocolate Chip
+        </label>
+      </div>
+      <button class="btn" id="q4">Submit!</button>
     </div>
   </div>
+
+  <div class="form vacation hidden">
+    <div class="container">
+      <label>What is your ideal vacation?</label>
+      <div class="radio">
+        <label>
+          <input type="radio" name="location" value="city" checked>
+          Travel to a city you've never been
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="location" value="camp">
+          Go camping
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="location" value="visit">
+          Visit friends/family
+        </label>
+      </div>
+      <div class="radio">
+        <label>
+          <input type="radio" name="location" value="home">
+          A "staycation" at home
+        </label>
+      </div>
+      <button class="btn" id="q5">Submit!</button>
+    </div>
+  </div>
+
+  <div class="form images hidden">
+    <div class="container">
+      <label>Pick your favorite tech company!</label>
+    </div>
+  </div>
+
+
 
 </body>
 </html>
