creat img buttons into grid

--- a/index.html
+++ b/index.html
@@ -156,21 +156,23 @@
     <div class="container">
       <label>Pick your favorite tech company!</label>
       <br>
-      <div class="row">
-        <div class="col6">
+      <div id="grid">
+      <!-- <div class="row"> -->
+        <div class="cell">
           <button type="button" id="apple"><img src="img/apple.png"></button>
         </div>
-        <div class="col6">
+        <div class="cell">
           <button type="button" id="microsoft"><img src="img/microsoft.png"></button>
         </div>
-      </div>
-      <div class="row">
-        <div class="col6">
+      <!-- </div> -->
+      <!-- <div class="row"> -->
+        <div class="cell">
           <button type="button" id="google"><img src="img/google.png"></button>
         </div>
-        <div class="col6">
+        <div class="cell">
           <button type="button" id="meta"><img src="img/meta.png"></button>
         </div>
+      <!-- </div> -->
       </div>
     </div>
   </div>
