WIP attempt to collect value from img selection

--- a/index.html
+++ b/index.html
@@ -154,29 +154,34 @@
 <!-- image input -->
   <div class="form images hidden">
     <div class="container">
-      <label>Pick your favorite tech company!</label>
+      <label>Pick your favorite tech company and then view your results!</label>
       <br>
       <div id="grid">
-      <!-- <div class="row"> -->
         <div class="cell">
-          <button type="button" id="apple"><img src="img/apple.png"></button>
+          <button type="img" value="apple"><img src="img/apple.png" value="apple"></button>
         </div>
         <div class="cell">
-          <button type="button" id="microsoft"><img src="img/microsoft.png"></button>
-        </div>
-      <!-- </div> -->
-      <!-- <div class="row"> -->
-        <div class="cell">
-          <button type="button" id="google"><img src="img/google.png"></button>
+          <button type="img" value="microsoft"><img src="img/microsoft.png" aria-valuemax="microsoft"></button>
         </div>
         <div class="cell">
-          <button type="button" id="meta"><img src="img/meta.png"></button>
+          <button type="img" value="google"><img src="img/google.png" value="google"></button>
         </div>
-      <!-- </div> -->
+        <div class="cell">
+          <button type="img" value="meta"><img src="img/meta.png" value="meta"></button>
+        </div>
       </div>
     </div>
   </div>
+  <!-- results -->
+  <div class="ruby hidden">
 
+  </div>
+  <div class="c# hidden">
+
+  </div>
+  <div class="javascript hidden">
+
+  </div>
 
 
 </body>
