WIP attempt to allow page to progress after collecting img value

--- a/index.html
+++ b/index.html
@@ -158,16 +158,16 @@
       <br>
       <div id="grid">
         <div class="cell">
-          <button type="img" value="apple"><img src="img/apple.png" value="apple"></button>
+          <button id="img1" type="submit" value="apple"><img src="img/apple.png"></button>
         </div>
         <div class="cell">
-          <button type="img" value="microsoft"><img src="img/microsoft.png" aria-valuemax="microsoft"></button>
+          <button id="img2" type="submit" value="microsoft"><img src="img/microsoft.png"></button>
         </div>
         <div class="cell">
-          <button type="img" value="google"><img src="img/google.png" value="google"></button>
+          <button id="img3" type="submit" value="google"><img src="img/google.png"></button>
         </div>
         <div class="cell">
-          <button type="img" value="meta"><img src="img/meta.png" value="meta"></button>
+          <button id="img4" type="submit" value="meta"><img src="img/meta.png"></button>
         </div>
       </div>
     </div>
