WIP button inputs

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <button class="btn btn-lg" id="begin">Let's begin!</button>
     </div>
   </div>
-<!-- name input -->
+  <!-- <form class="survey"> -->
   <div class="form name hidden">
     <div class="container">
       <div class="form-group row">
@@ -121,25 +121,25 @@
     <div class="container">
       <label>What is your <u>ideal vacation</u>?</label>
       <br>
-      <div class="radio">
+      <div class="radio2">
         <label>
           <input type="radio" name="location" value="city" checked>
           Travel to a city you've never been
         </label>
       </div>
-      <div class="radio">
+      <div class="radio2">
         <label>
           <input type="radio" name="location" value="camp">
           Go camping
         </label>
       </div>
-      <div class="radio">
+      <div class="radio2">
         <label>
           <input type="radio" name="location" value="visit">
           Visit friends/family
         </label>
       </div>
-      <div class="radio">
+      <div class="radio2">
         <label>
           <input type="radio" name="location" value="home">
           A "staycation" at home
@@ -158,16 +158,16 @@
       <br>
       <div id="grid">
         <div class="cell">
-          <button id="img1" type="submit" value="apple"><img src="img/apple.png"></button>
+          <input id="apple"  type="image"><img src="img/apple.png"></button>
         </div>
         <div class="cell">
-          <button id="img2" type="submit" value="microsoft"><img src="img/microsoft.png"></button>
+          <input id="microsoft" type="button" value="microsoft"><img src="img/microsoft.png"></button>
         </div>
         <div class="cell">
-          <button id="img3" type="submit" value="google"><img src="img/google.png"></button>
+          <input id="google" type="button" value="google"><img src="img/google.png"></button>
         </div>
         <div class="cell">
-          <button id="img4" type="submit" value="meta"><img src="img/meta.png"></button>
+          <input id="meta" type="button" value="meta"><img src="img/meta.png"></button>
         </div>
       </div>
     </div>
