add name to survey results, WIP finish all branches

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
   <form class="survey">
 <!-- name input -->
-    <div class="form name hidden">
+    <div class="form name-input hidden">
       <div class="container">
         <div class="form-group row">
           <div>
@@ -159,16 +159,16 @@
         <br>
         <div id="grid">
           <div class="cell">
-            <input id="apple"  type="image" src="img/apple.png">
+            <button id="apple"  type="submit image" src="img/apple.png"><img src="img/apple.png"></button>
           </div>
           <div class="cell">
-            <input id="microsoft" type="image" src="img/microsoft.png">
+            <button id="microsoft" type="submit image" src="img/microsoft.png"><img src="img/microsoft.png"></button>
           </div>
           <div class="cell">
-            <input id="google" type="image" src="img/google.png">
+            <button id="google" type="submit image" src="img/google.png"><img src="img/google.png"></button>
           </div>
           <div class="cell">
-            <input id="meta" type="image" src="img/meta.png">
+            <button id="meta" type="submit image" src="img/meta.png"><img src="img/meta.png"></button>
           </div>
         </div>
       </div>
