complete scripts and index, refactor scripts, remove unnecessary comments

--- a/index.html
+++ b/index.html
@@ -46,13 +46,12 @@
         </div>
         <br>
         <select class="form" id="question2">
-          <option >Select one</option>
+          <option>Choose one</option>
           <option>Red</option>
           <option>Green</option>
           <option>Blue</option>
           <option>Orange</option>
           <option>Yellow</option>
-          <option>Black</option>
         </select>
       </div>
       <br>
@@ -68,13 +67,12 @@
         </div>
         <br>
         <select class="form" id="question3">
-          <option>Select one</option>
+          <option>Choose one</option>
           <option>Pizza</option>
           <option>Sushi</option>
           <option>Tacos</option>
           <option>Pasta</option>
           <option>Burgers</option>
-          <option>Salad</option>
         </select>
       </div>
       <br>
@@ -178,19 +176,18 @@
   <div class="results">
     <div id="ruby" class="hidden">
       <h1>Well <span class="name"></span>, it looks like Ruby is the choice for you!</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo at incidunt minus, esse, doloremque magnam ad praesentium recusandae pariatur eligendi iste animi temporibus necessitatibus aperiam quisquam, a dolores commodi delectus.</p>
+      <p>Ruby is an open-source object-oriented scripting language invented in the mid-90s by Yukihiro Matsumoto. Unlike languages such as C and C++, a scripting language doesn't talk directly to hardware. It's written to a text file and then parsed by an interpreter and turned into code.</p>
     </div>
 
     <div id="c#" class="hidden">
       <h1>Well <span class="name"></span>, it looks like C# is the choice for you!</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo at incidunt minus, esse, doloremque magnam ad praesentium recusandae pariatur eligendi iste animi temporibus necessitatibus aperiam quisquam, a dolores commodi delectus.</p>
+      <p>C# is a general-purpose, modern and object-oriented programming language pronounced as “C sharp”. It was developed by Microsoft led by Anders Hejlsberg and his team within the . Net initiative and was approved by the European Computer Manufacturers Association (ECMA) and International Standards Organization (ISO).</p>
     </div>
+
     <div id="javascript" class="hidden">
       <h1>Well <span class="name"></span>, it looks like JavaScript is the choice for you!</h1>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo at incidunt minus, esse, doloremque magnam ad praesentium recusandae pariatur eligendi iste animi temporibus necessitatibus aperiam quisquam, a dolores commodi delectus.</p>
+      <p>JavaScript is a text-based programming language used both on the client-side and server-side that allows you to make web pages interactive. Where HTML and CSS are languages that give structure and style to web pages, JavaScript gives web pages interactive elements that engage a user. I also personally find it very frustrating and occasionally defeating.</p>
     </div>
   </div>
-
-
 </body>
 </html>
